docs: add Auth endpoint and Authorization in SwaggerUI
